# sirius_orbital

./: .gitignore  CMakeLists.txt  README.md  sirius_orbital.sln  sirius_orbital.vcxproj  sirius_orbital.vcxproj.filters
include/: WindowManager.h
include/camera/: CameraManager.h
include/ui/: UiManager.h
src/: CameraManager.cpp  UiManager.cpp  WindowManager.cpp  main.cpp
